# grinder-controller

./: .gitignore  CMakeLists.txt  Grinder Controller  Makefile  README.md  main.c  main.h  motor.h  state_machine.c  switch.c
pcb-layout/: controller.brd  controller.csv  controller.pro  controller.sch  eagle.epf
src/: CMakeLists.txt  main.c  main.h  motor.c  state_machine.h  switch.h  timers.c  timers.h
